--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "cors": "^2.8.5",
     "encrypt-rsa": "^3.3.0",
+    "express": "^5.1.0",
     "js-sha256": "^0.11.0",
+    "oracledb": "^6.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
