--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,9 @@
 {
-  "name": "allaskereso",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js"
-  },
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.0",
-    "oracledb": "^6.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.9",
+    "oracledb": "^6.8.0"
   }
 }
